# accelbyte-python-modular-sdk

./: .gitignore  CHANGELOG.md  Jenkinsfile.coverity  Jenkinsfile.docs  Jenkinsfile.generate  Jenkinsfile.github  Jenkinsfile.nightly  Jenkinsfile.nightly-starter  Makefile  Makefile.dev  README.md  codegen.txt  requirements-test.txt
src/all/: README.md  pyproject.toml
src/core/: README.md  pyproject.toml
src/core/accelbyte_py_sdk/: __init__.py  __main__.py
src/core/accelbyte_py_sdk/core/: __init__.py  _proto_http_request.py  _sdk.py  _utils.py  _websocket_client.py
src/features/auth/: pyproject.toml
src/features/auth/accelbyte_py_sdk/services/auth/: _jwt.py  _login.py  _login_background.py  _login_client.py  _login_const.py  _login_on_demand.py  _login_platform.py  _login_refresh.py  _login_user.py  _logout.py  _refresher.py
src/features/token-validation/: pyproject.toml
src/services/achievement/: README.md  pyproject.toml
src/services/achievement/accelbyte_py_sdk/api/achievement/: __init__.py
src/services/achievement/accelbyte_py_sdk/api/achievement/models/: __init__.py  models_achievement_order_update_request.py  models_achievement_request.py  models_achievement_response.py  models_achievement_update_request.py  models_additional_info.py  models_contributor_response.py  models_global_achievement_response.py  models_icon.py  models_paginated_achievement_response.py  models_paginated_contributor_response.py  models_paginated_global_achievement_response.py  models_paginated_tag_response.py  models_paginated_user_achievement_response.py  models_paginated_user_contribution_response.py  models_pagination.py  models_public_achievement_response.py  models_public_achievements_response.py  models_tag_response.py  models_user_achievement_response.py  models_user_contribution_response.py  response_error.py  service_import_config_response.py
src/services/achievement/accelbyte_py_sdk/api/achievement/operations/: __init__.py
src/services/achievement/accelbyte_py_sdk/api/achievement/wrappers/: __init__.py
src/services/cloudsave/: README.md  pyproject.toml
src/services/cloudsave/accelbyte_py_sdk/api/cloudsave/: __init__.py
src/services/cloudsave/accelbyte_py_sdk/api/cloudsave/models/: __init__.py  models_admin_concurrent_record_request.py  models_admin_game_concurrent_record_request.py  models_admin_game_record_request.py  models_admin_game_record_response.py  models_admin_player_concurrent_record_request.py  models_admin_player_record_key_info.py  models_admin_player_record_request.py  models_admin_player_record_response.py  models_app_config.py  models_binary_info_response.py  models_binary_record_request.py  models_bulk_get_admin_game_record_request.py  models_bulk_get_admin_game_record_response.py  models_bulk_get_admin_player_record_request.py  models_bulk_get_admin_player_record_response.py  models_bulk_get_game_binary_record_response.py  models_bulk_get_game_record_request.py  models_bulk_get_game_record_response.py  models_bulk_get_player_binary_record_response.py  models_bulk_get_player_record_response.py  models_bulk_get_player_record_size_response.py  models_bulk_get_player_records_request.py  models_bulk_user_i_ds_request.py  models_bulk_user_key_request.py  models_concurrent_record_request.py  models_custom_config.py  models_custom_function.py  models_game_binary_record_create.py  models_game_binary_record_metadata_request.py  models_game_binary_record_response.py  models_game_record_request.py  models_game_record_response.py  models_list_admin_game_record_keys_response.py  models_list_admin_player_record_keys_response.py  models_list_game_binary_records_response.py  models_list_game_record_keys_response.py  models_list_player_binary_records_response.py  models_list_player_record_keys_response.py  models_pagination.py  (+16 more)
src/services/cloudsave/accelbyte_py_sdk/api/cloudsave/operations/: __init__.py
src/services/cloudsave/accelbyte_py_sdk/api/cloudsave/wrappers/: __init__.py
src/services/dslogmanager/: README.md  pyproject.toml
src/services/dslogmanager/accelbyte_py_sdk/api/dslogmanager/: __init__.py
src/services/dslogmanager/accelbyte_py_sdk/api/dslogmanager/models/: __init__.py  log_app_message_declaration.py  models_allocation_event.py  models_batch_download_logs_request.py  models_download_logs_request.py  models_list_terminated_servers_response.py  models_log_file_status.py  models_match_result.py  models_notif_payload_server_status_change.py  models_paging_cursor.py  models_request_match_member.py  models_request_match_party.py  models_request_matching_ally.py  models_server.py  models_server_logs.py  models_status_history.py  response_error.py
src/services/dslogmanager/accelbyte_py_sdk/api/dslogmanager/operations/: __init__.py
src/services/eventlog/: README.md  pyproject.toml
src/services/eventlog/accelbyte_py_sdk/api/eventlog/: __init__.py
src/services/gametelemetry/: pyproject.toml
src/services/gametelemetry/accelbyte_py_sdk/api/gametelemetry/: __init__.py
src/services/group/: README.md  pyproject.toml
src/services/group/accelbyte_py_sdk/api/group/: __init__.py
src/services/iam/: README.md  pyproject.toml
src/services/iam/accelbyte_py_sdk/api/iam/: __init__.py
src/services/leaderboard/: README.md  pyproject.toml
src/services/leaderboard/accelbyte_py_sdk/api/leaderboard/: __init__.py
src/services/legal/: README.md  pyproject.toml
src/services/legal/accelbyte_py_sdk/api/legal/: __init__.py
src/services/match2/: README.md  pyproject.toml
src/services/match2/accelbyte_py_sdk/api/match2/: __init__.py
src/services/platform/: README.md  pyproject.toml
src/services/platform/accelbyte_py_sdk/api/platform/: __init__.py  errors.py
src/services/qosm/: README.md  pyproject.toml
src/services/qosm/accelbyte_py_sdk/api/qosm/: __init__.py
src/services/seasonpass/: README.md  pyproject.toml
src/services/seasonpass/accelbyte_py_sdk/api/seasonpass/: __init__.py
src/services/social/: README.md  pyproject.toml
src/services/social/accelbyte_py_sdk/api/social/: __init__.py
(+8909 files in other folders)
