[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-core"
version = "0.1.0"
description = "AccelByte Python SDK - Core"
requires-python = ">=3.9"
dependencies = [
    "bitarray",
    "httpcore[http2]",
    "httpx",
    "mmh3",
    "PyJWT[crypto]",
    "PyYAML",
    "requests",
    "websockets",
]
