[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-achievement"
readme = "README.md"
version = "2.21.3"
description = "AccelByte Python SDK - AccelByte Gaming Services Achievement Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]