[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-cloudsave"
readme = "README.md"
version = "3.12.6"
description = "AccelByte Python SDK - AccelByte Gaming Services Cloudsave Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]