[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-dslogmanager"
version = "3.3.1"
description = "AccelByte Python SDK - AccelByte Gaming Services Ds Log Manager Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]