[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-group"
version = "2.18.1"
description = "AccelByte Python SDK - AccelByte Gaming Services Group Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]