[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-iam"
readme = "README.md"
version = "7.4.1"
description = "AccelByte Python SDK - AccelByte Gaming Services Iam Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]