[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-leaderboard"
readme = "README.md"
version = "2.26.3"
description = "AccelByte Python SDK - AccelByte Gaming Services Leaderboard Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]