[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-legal"
readme = "README.md"
version = "1.31.2"
description = "AccelByte Python SDK - AccelByte Gaming Services Legal Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]