[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-qosm"
version = "1.18.3"
description = "AccelByte Python SDK - AccelByte Gaming Services Qos Manager Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]