[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-qosm"
readme = "README.md"
version = "1.18.5"
description = "AccelByte Python SDK - AccelByte Gaming Services Qos Manager Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]