[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-seasonpass"
readme = "README.md"
version = "1.19.3"
description = "AccelByte Python SDK - AccelByte Gaming Services Seasonpass Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]