[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accelbyte-py-sdk-service-social"
version = "2.9.3"
description = "AccelByte Python SDK - AccelByte Gaming Services Social Service"
requires-python = ">=3.9"
dependencies = [
    "accelbyte-py-sdk-core",
]